@@ -2,7 +2,9 @@ $Id$
 
 2017-11-18  Alex Samorukov  <samm@os2.kiev.ua>
 
-	drivedb.h: add Swissbit C440 industrial cf card series (#942)
+	drivedb.h:
+	- Add Swissbit C440 industrial cf card series (#942)
+	- Fix Innolite Satadom D150QV entry (#939)
 
 2017-11-16  Christian Franke  <franke@computer.org>
 
